# Gerberoid

./: .gitignore  README.md  build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/jni/: AlertDialog.h  AlertDialogBuilder.cpp  AlertDialogBuilder.h  Bitmap.cpp  Bitmap.h  Canvas.cpp  Canvas.h  ColorFilter.cpp  ColorFilter.h  Context.h  DialogInterfaceOnClickListener.h  GerbviewFrame.cpp  Html.cpp  Html.h  Paint.cpp  Paint.h  Path.cpp  Path.h  PathEffect.cpp  PathEffect.h  PorterDuff.cpp  PorterDuff.h  Rect.cpp  Rect.h  Spanned.h  Toast.cpp  Toast.h  View.cpp  View.h  Xfermode.h  inithook.cpp  inithook.h  jniref.cpp  jniref.h  localframe.cpp  localframe.h
app/src/main/cpp/shim/: ContextProvider.h  base_struct.cpp  base_struct.h  class_base_screen.h  class_drawpanel.h  class_page_info.h  common.cpp  config.h  confirm.cpp  confirm.h  draw_panel.cpp  gerbview_frame.cpp  gerbview_frame.h  gr_basic.cpp  html_messagebox.cpp  html_messagebox.h  math_for_graphics.h  msgpanel.cpp  msgpanel.h  printout_controler.h  richio.h  threadscopedcontext.cpp  threadscopedcontext.h  worksheet.cpp
app/src/main/cpp/shim/math/: box2.h  matrix3x3.h
app/src/main/cpp/shim/wx/: arrstr.h  bitmap.cpp  bitmap.h  brush.h  colour.h  confbase.h  dc.cpp  dc.h  debug.cpp  debug.h  defs.h  fileconf.h  filefn.cpp  gdicmn.h  log.h  msgdlg.cpp  pen.h  string.cpp  string.h  utils.cpp  window.h  wx.h
app/src/main/res/drawable/: fullscreen.xml  gbr_select_mode0.xml  gbr_select_mode1.xml  gbr_select_mode2.xml  gerber_file.xml  gerbview_clear_layers.xml  gerbview_drill_file.xml  gerbview_show_negative_objects.xml  grid.xml  ic_info_outline_black_24px.xml  ic_settings_black_24px.xml  ic_visibility_black_24px.xml  ic_visibility_off_black_24px.xml  ic_zoom_in_black_24px.xml  ic_zoom_out_black_24px.xml  opt_show_polygon.xml  pad_sketch.xml  show_dcodenumber.xml  showtrack.xml  visibility_toggle.xml
app/src/main/res/layout/: activity_archive.xml  activity_main.xml  bottom_toolbar.xml  content_main.xml  item_archive_entry.xml  layer_spinner_entry.xml  layout_fullscreen_progress.xml  tools_drawer.xml
app/src/main/res/menu/: action_menu.xml  archive_toolbar.xml  bottom_toolbar.xml
app/src/main/res/values/: colors.xml  dimensions.xml  gerbview_constants.xml  strings.xml  styles.xml
(+34 files in other folders)
